<resources>
    <string name="app_name">Hyper Rust</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="saveMessage">Save Message</string>
    <string name="enterMsg">Enter your message here</string>
    <string name="welcomeMessage">Welcome to Hyper Rust</string>
    <string name="editMessage">Edit the message below</string>
    <string name="listViewMessage">Previously saved messages are:</string>
    <string name="title_activity_activity_edit">ActivityEdit</string>

</resources>
